--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,3 +1,47 @@
 .heading{
     color: var(--primary-color);
 }
+
+.container {
+    display: flex;
+    justify-content: space-around;
+    /* background-color: gray; */
+    align-items: center;
+}
+
+.main_image {
+    width: 160px;
+}
+
+.navbar_link {
+    display: flex;
+    list-style: none;
+    gap: 30px;
+}
+
+.drop_down_link {
+    list-style: none;
+    display: block;
+    position: absolute;
+    background-color: var(--shadow-color);
+    text-align: left;
+    border-radius: 10px;
+    padding: 5px;
+    margin-top: 10px;
+}
+
+.drop_down_link li {
+    margin: 10px;
+}
+
+.link {
+    text-decoration: none;
+    color: var(--primary-color);
+    font-weight: bold;
+    list-style: none;
+}
+
+.btn {
+    display: flex;
+    gap: 15px;
+}
